RESOLVED FIXED175795
ASSERTION FAILED: !m_connections.contains(&connection) in WebCore::SWServer::unregisterConnection(WebCore::SWServer::Connection&)
https://bugs.webkit.org/show_bug.cgi?id=175795
Summary ASSERTION FAILED: !m_connections.contains(&connection) in WebCore::SWServer::...
Ryan Haddad
Reported 2017-08-21 16:45:21 PDT
Created attachment 318697 [details] Crash log ASSERTION FAILED: !m_connections.contains(&connection) /Volumes/Data/slave/sierra-debug/build/Source/WebCore/workers/service/server/SWServer.cpp(76) : void WebCore::SWServer::unregisterConnection(WebCore::SWServer::Connection &) 1 0x108ebfc5d WTFCrash 2 0x10efec67e WebCore::SWServer::unregisterConnection(WebCore::SWServer::Connection&) 3 0x10efec612 WebCore::SWServer::Connection::~Connection() 4 0x102f759c6 WebKit::WebSWServerConnection::~WebSWServerConnection() 5 0x102f759e5 WebKit::WebSWServerConnection::~WebSWServerConnection() 6 0x102f75a49 WebKit::WebSWServerConnection::~WebSWServerConnection() 7 0x102939415 WTF::VectorDestructor<true, std::__1::unique_ptr<WebKit::WebSWServerConnection, std::__1::default_delete<WebKit::WebSWServerConnection> > >::destruct(std::__1::unique_ptr<WebKit::WebSWServerConnection, std::__1::default_delete<WebKit::WebSWServerConnection> >*, std::__1::unique_ptr<WebKit::WebSWServerConnection, std::__1::default_delete<WebKit::WebSWServerConnection> >*) 8 0x1029392cd WTF::VectorTypeOperations<std::__1::unique_ptr<WebKit::WebSWServerConnection, std::__1::default_delete<WebKit::WebSWServerConnection> > >::destruct(std::__1::unique_ptr<WebKit::WebSWServerConnection, std::__1::default_delete<WebKit::WebSWServerConnection> >*, std::__1::unique_ptr<WebKit::WebSWServerConnection, std::__1::default_delete<WebKit::WebSWServerConnection> >*) 9 0x102939290 WTF::Vector<std::__1::unique_ptr<WebKit::WebSWServerConnection, std::__1::default_delete<WebKit::WebSWServerConnection> >, 0ul, WTF::CrashOnOverflow, 16ul>::~Vector() 10 0x102933ed5 WTF::Vector<std::__1::unique_ptr<WebKit::WebSWServerConnection, std::__1::default_delete<WebKit::WebSWServerConnection> >, 0ul, WTF::CrashOnOverflow, 16ul>::~Vector() 11 0x102933858 WebKit::StorageToWebProcessConnection::didClose(IPC::Connection&) 12 0x10242fc02 IPC::Connection::connectionDidClose()::$_13::operator()() 13 0x10242fa89 WTF::Function<void ()>::CallableWrapper<IPC::Connection::connectionDidClose()::$_13>::call() 14 0x108ef259b WTF::Function<void ()>::operator()() const 15 0x108f10f43 WTF::RunLoop::performWork() 16 0x108f117c4 WTF::RunLoop::performWork(void*) 17 0x7fffcdcfd3e1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 18 0x7fffcdcde65c __CFRunLoopDoSources0 19 0x7fffcdcddb46 __CFRunLoopRun 20 0x7fffcdcdd544 CFRunLoopRunSpecific 21 0x7fffcf70e4e2 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 22 0x7fffcf70e3ba -[NSRunLoop(NSRunLoop) run] 23 0x7fffe3c6e89b _xpc_objc_main 24 0x7fffe3c6d2e4 xpc_main 25 0x102322105 main 26 0x7fffe3a15235 start 27 0x1 https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK2%20(Tests)/r220980%20(2634)/results.html
Attachments
Crash log (55.52 KB, text/plain)
2017-08-21 16:45 PDT, Ryan Haddad
no flags
PFL (1.33 KB, patch)
2017-08-21 16:54 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2017-08-21 16:52:06 PDT
Wow, I just got the assertion backwards. Debug WK2 EWS definitely would've caught this =/
Brady Eidson
Comment 2 2017-08-21 16:54:33 PDT
WebKit Commit Bot
Comment 3 2017-08-21 17:23:42 PDT
Comment on attachment 318698 [details] PFL Clearing flags on attachment: 318698 Committed r220992: <http://trac.webkit.org/changeset/220992>
WebKit Commit Bot
Comment 4 2017-08-21 17:23:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-08-21 17:24:45 PDT
Note You need to log in before you can comment on or make changes to this bug.