ASSERTION FAILED: !m_connections.contains(&connection) in WebCore::SWServer::unregisterConnection(WebCore::SWServer::Connection&). https://bugs.webkit.org/show_bug.cgi?id=175795

Rubber-stamped by Andy Estes.

* workers/service/server/SWServer.cpp:
(WebCore::SWServer::unregisterConnection): Flip the ASSERT to be... correct.


Canonical link: https://commits.webkit.org/192449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220992 268f45cc-cd09-0410-ab3c-d52691b4dbfc